--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -17,7 +17,7 @@
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="tesseract">
-                <span class="oi oi-aperture" aria-hidden="true"></span> Tesseract
+                <span class="oi oi-aperture" aria-hidden="true"></span> 4D Würfel
             </NavLink>
         </div>
 
